# T1_Lindblad_Relaxation_Simulator

./: README.md  main.py  main_with_plots.py  pyproject.toml
examples/: t1_basic.py  t1_rabi_with_plots.py  t1_ramsey_with_plots.py  t1_with_plots.py
src/t1sim/: __init__.py  sim.py
tests/: test_main.py  test_main_with_plots.py  test_sim.py  test_t1_with_plots_example.py
